[package]
name = "ncsum-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
cpio = "0.2.2"
hex-literal = "0.4.1"
md5 = "0.7.0"
serde = {version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[[bin]]
name = "ncsum"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
